fixing image overlapping navigation bug

--- a/src/components/photos/Gallery.css
+++ b/src/components/photos/Gallery.css
@@ -86,3 +86,7 @@ body {
 .loading{
     animation: image_loading 1s 0s linear;
 }
+
+.ReactModal__Overlay{
+  z-index: 999;
+}
