--- a/src/stylesheets/navigation.css
+++ b/src/stylesheets/navigation.css
@@ -4,6 +4,8 @@
 
 .navigation {
   --background: rgba(255, 255, 255, 1);
+  position: relative;
+  z-index: 900;
 }
 
 body {
